--- a/rails/Projekte/flix/app/views/movies/index.html.erb
+++ b/rails/Projekte/flix/app/views/movies/index.html.erb
@@ -1,13 +1,37 @@
-
-
 <h1>Movies</h1>
 
-<ul>
-  <% @movies.each do |movie| %>
-    <li>
-    <%= movie.title %>
-    has a rank of: <%= movie.rating %>
-    costs: <%= movie.total_gross %>
-    </li>
-  <% end %>
-</ul>
+<p>Diverse Movies</p>
+
+<table>
+<% @movies.each do |movie| %>
+	<tr>
+		
+		<td>
+		
+			<%=	movie.title	%>
+		
+		</td>
+	
+		<td>
+			<%= movie.rating %>
+
+		</td>
+	
+		<td>
+			<%= movie.total_gross %>
+
+		</td>
+		<td>
+			<%= movie.description %>
+
+		</td>
+		<td>
+			<%= movie.released_on %>
+
+		</td>
+	</tr>
+
+
+<% end %>
+
+</table>
