--- a/rails/Projekte/rails_app/app/views/events/index.html.erb
+++ b/rails/Projekte/rails_app/app/views/events/index.html.erb
@@ -1,20 +1,44 @@
 <h1>Events</h1>
 
-<ul>
+<table>
+	<tr>
+		<th>
+			Name
+		</th>
+		<th>
+			Beschreibung
+		</th>
+		<th>
+			Ort
+		</th>
+		<th>
+			Preis
+		</th>
+		<th>
+			Beginn
+		</th>
+	</tr>
 	<% @events.each do |event| %>
-		<li>
-
-			<%= event.name %>,
-			in: <%= event.location %>,
-			kostet: <%= event.price %>	
-
-
-		</li>
+	<tr>
 		
-
-
+		<td>
+			<%= event.name %>
+		</td>
+		<td>
+			<%= truncate(event.description, length: 30) %>
+		</td>
+		<td>
+			<%= event.location %>
+		</td>
+		<td>
+			<%= event.price %>
+		</td>
+		<td>
+			<%= event.start_date %>
+		</td>
+		
+	</tr>
 
 	<% end %>
+</table>
 
-
-</ul>
