--- a/rails/Projekte/rails_app/app/views/events/index.html.erb
+++ b/rails/Projekte/rails_app/app/views/events/index.html.erb
@@ -36,9 +36,22 @@
 		<td>
 			<%= event.start_date %>
 		</td>
-		
+		<td>
+			<%= link_to "Show", event_path(event.id) %>
+		</td>
+		<td>
+			<%= link_to "Edit", edit_event_path(event.id) %>
+
+		</td>
+		<td>
+			<%= link_to "Delete", event_path(event.id),method: :delete, data: {confirm: 'Sicher löschen?'} %>
+
+		</td>
 	</tr>
 
 	<% end %>
 </table>
+
+<p><%= link_to "Neues Event", new_event_path %></p>
+
 
