--- a/rails/Projekte/rails_app/app/views/events/_form.html.erb
+++ b/rails/Projekte/rails_app/app/views/events/_form.html.erb
@@ -1,4 +1,29 @@
 <%= form_for(@event) do |f| %>
+	
+	<% if @event.errors.any? %>
+	<div class="panel">
+		<h2>Der Datensatz <%= @event.class.name.titleize.downcase %> konnte nicht gespeichert werden.</h2>
+		<p>
+		<%= @event.errors.full_messages.to_sentence %>
+		Korrigieren sie bitte <%= pluralize(@event.errors.count, 'den', 'die')%> Fehler.
+		</p>
+		<p>
+			<ul>
+				<% @event.errors.full_messages.ech do |message| %>
+				<li>
+					<%= message %>
+
+				</li>
+				<% end %>
+
+			</ul>
+
+		</p>
+	</div>
+	<% end %>
+
+
+
 	<p>
 		<%= f.label :name %>
 		<%= f.text_field :name %>
