--- a/rails/Projekte/rails_app/app/views/events/show.html.erb
+++ b/rails/Projekte/rails_app/app/views/events/show.html.erb
@@ -11,4 +11,28 @@
 <h3>Price</h3>
 <p><%= format_price @event %></p>
 
+<h3>Categories</h3>
+<ul>
+	<% @categories.each do |category| %>
+		<li><%= category.name %></li>
+	<% end %>
+</ul>
+<p>
+<% if like = Link.where(user_id: current_user.id, event_id: @event.id).first%>
+<%= link_to 'DISLIKE', event_like_path(@event.id, like.id), method: :delete, class: 'button alert' %>
+<% else %>
+<%= button_to 'LIKE', event_likes_path(@event)%>
+<% end %>
+</p>
+<% if @likers.any? %>
+<h3>LIKERS</h3>
+<ul>
+	<% @likers.each do |user| %>
+		<li><%= user.mail %></li>
+	<% end %>
+
+</ul>
+
+<% end %>
+
 <p><%= link_to "Alle Events anzeigen", events_path %></p>
